--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorOrange</item>
-        <item name="colorPrimaryDark">@color/colorOrangeDark</item>
-        <item name="colorAccent">@color/colorBlackAlpha</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -98,7 +98,7 @@
     <style name="SelectableItemBackgroundButton" parent="Button">
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:theme">@style/SelectableItemTheme</item>
-        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
         <item name="android:paddingLeft">80dp</item>
         <item name="android:paddingRight">80dp</item>
     </style>
@@ -106,7 +106,7 @@
     <style name="SelectableItemBackgroundButtonDark" parent="Button">
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:theme">@style/SelectableItemTheme</item>
-        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
         <item name="android:paddingLeft">25dp</item>
         <item name="android:paddingRight">25dp</item>
     </style>
